// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 [babel-ts] format 1`] = `
"Unexpected token (2:3)
  1 | enum Foo {
> 2 |   1 = 1
    |   ^
  3 | }
Cause: Unexpected token (2:2)"
`;

exports[`snippet: #0 [babel-ts] format 2`] = `
"Unexpected token (2:3)
  1 | enum Foo {
> 2 |   [foo] = 1
    |   ^
  3 | }
Cause: Unexpected token (2:2)"
`;

exports[`snippet: #0 [oxc-ts] format 1`] = `
"An enum member cannot have a numeric name. (2:3)
  1 | enum Foo {
> 2 |   1 = 1
    |   ^
  3 | }"
`;

exports[`snippet: #0 [typescript] format 1`] = `
"An enum member cannot have a numeric name. (2:3)
  1 | enum Foo {
> 2 |   1 = 1
    |   ^
  3 | }
Cause: An enum member cannot have a numeric name."
`;

exports[`snippet: #0 [typescript] format 2`] = `
"Computed property names are not allowed in enums. (2:3)
  1 | enum Foo {
> 2 |   [foo] = 1
    |   ^^^^^
  3 | }
Cause: Computed property names are not allowed in enums."
`;

exports[`snippet: #1 [babel-ts] format 1`] = `
"Unexpected token (2:3)
  1 | enum Foo {
> 2 |   1n = 1
    |   ^
  3 | }
Cause: Unexpected token (2:2)"
`;

exports[`snippet: #1 [oxc-ts] format 1`] = `
"An enum member cannot have a numeric name. (2:3)
  1 | enum Foo {
> 2 |   1n = 1
    |   ^^
  3 | }"
`;

exports[`snippet: #1 [typescript] format 1`] = `
"An enum member cannot have a numeric name. (2:3)
  1 | enum Foo {
> 2 |   1n = 1
    |   ^^
  3 | }
Cause: An enum member cannot have a numeric name."
`;

exports[`snippet: #2 [babel-ts] format 1`] = `
"Unexpected token (2:3)
  1 | enum Foo {
> 2 |   [1] = 1
    |   ^
  3 | }
Cause: Unexpected token (2:2)"
`;

exports[`snippet: #2 [oxc-ts] format 1`] = `
"An enum member cannot have a numeric name. (2:4)
  1 | enum Foo {
> 2 |   [1] = 1
    |    ^
  3 | }"
`;

exports[`snippet: #2 [typescript] format 1`] = `
"Computed property names are not allowed in enums. (2:3)
  1 | enum Foo {
> 2 |   [1] = 1
    |   ^^^
  3 | }
Cause: Computed property names are not allowed in enums."
`;

exports[`snippet: #3 [babel-ts] format 1`] = `
"Unexpected token (2:3)
  1 | enum Foo {
> 2 |   [1n] = 1
    |   ^
  3 | }
Cause: Unexpected token (2:2)"
`;

exports[`snippet: #3 [oxc-ts] format 1`] = `
"Computed property names are not allowed in enums. (2:4)
  1 | enum Foo {
> 2 |   [1n] = 1
    |    ^^
  3 | }"
`;

exports[`snippet: #3 [typescript] format 1`] = `
"Computed property names are not allowed in enums. (2:3)
  1 | enum Foo {
> 2 |   [1n] = 1
    |   ^^^^
  3 | }
Cause: Computed property names are not allowed in enums."
`;

exports[`snippet: #4 [babel-ts] format 1`] = `
"Unexpected token (2:3)
  1 | enum Foo {
> 2 |   [foo] = 1
    |   ^
  3 | }
Cause: Unexpected token (2:2)"
`;

exports[`snippet: #4 [oxc-ts] format 1`] = `
"Computed property names are not allowed in enums. (2:4)
  1 | enum Foo {
> 2 |   [foo] = 1
    |    ^^^
  3 | }"
`;

exports[`snippet: #4 [typescript] format 1`] = `
"Computed property names are not allowed in enums. (2:3)
  1 | enum Foo {
> 2 |   [foo] = 1
    |   ^^^^^
  3 | }
Cause: Computed property names are not allowed in enums."
`;
